// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Button should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    onClick="() => {console.log(\\"some function\\")}"
>
    12
</Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "onClick": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "onClick": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App ProgressBar should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBarList
    progressBars={
        Array [
            10,
            20,
            30,
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Array [
    <ProgressBar
      value={10}
/>,
    <ProgressBar
      value={20}
/>,
    <ProgressBar
      value={30}
/>,
  ],
  Symbol(enzyme.__nodes__): Array [
    Array [
      <ProgressBar
        value={10}
/>,
      <ProgressBar
        value={20}
/>,
      <ProgressBar
        value={30}
/>,
    ],
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`App ProgressBarButtons should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProgressBarButtons
    progressBarButtons={
        Array [
            10,
            20,
            -30,
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Array [
    <option
      value={0}
>
      ProgressBar 
      1
</option>,
    <option
      value={1}
>
      ProgressBar 
      2
</option>,
    <option
      value={2}
>
      ProgressBar 
      3
</option>,
  ],
  Symbol(enzyme.__nodes__): Array [
    Array [
      <option
        value={0}
>
        ProgressBar 
        1
</option>,
      <option
        value={1}
>
        ProgressBar 
        2
</option>,
      <option
        value={2}
>
        ProgressBar 
        3
</option>,
    ],
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
